--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,7 +11,7 @@ permissions:
 
 env:
   GO_VERSION: stable
-  GOLANGCI_LINT_VERSION: v1.59
+  GOLANGCI_LINT_VERSION: v1.61
 
 jobs:
   detect-modules:
@@ -24,7 +24,7 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
       - id: set-modules
-        run: echo "modules=$(go list -m -json | jq -s '.' | jq -c '[.[].Dir]')" >> $GITHUB_OUTPUT
+        run: echo "modules=$(go list -m -json | jq -sc '[.[].Dir]')" >> $GITHUB_OUTPUT
 
   golangci:
     name: lint
@@ -32,18 +32,18 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        modules: ${{ fromJSON(needs.detect-modules.outputs.modules) }}
+        module: ${{ fromJSON(needs.detect-modules.outputs.modules) }}
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: golangci-lint ${{ matrix.modules }}
+      - name: golangci-lint ${{ matrix.module }}
         uses: golangci/golangci-lint-action@v6
         with:
           version: ${{ env.GOLANGCI_LINT_VERSION }}
-          working-directory: ${{ matrix.modules }}
+          working-directory: ${{ matrix.module }}
 
   gotest:
     name: tests
@@ -51,7 +51,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        modules: ${{ fromJSON(needs.detect-modules.outputs.modules) }}
+        module: ${{ fromJSON(needs.detect-modules.outputs.modules) }}
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
@@ -59,4 +59,4 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
       - name: Test with the Go CLI
-        run: go test -race ${{ matrix.modules }}/...
+        run: go test -race ${{ matrix.module }}/...
