--- a/sync/.golangci.yml
+++ b/sync/.golangci.yml
@@ -36,11 +36,11 @@ linters:
     - prealloc
     - revive
     - staticcheck
-    - tenv
     - testpackage
     - unconvert
     - unused
     - usestdlibvars
+    - usetesting
     - wastedassign
 
 linters-settings:
