--- a/protowrap/.golangci.yml
+++ b/protowrap/.golangci.yml
@@ -19,6 +19,7 @@ linters:
     - goconst
     - gocritic
     - gofmt
+    - goheader
     - goimports
     - gosec
     - gosimple
@@ -168,6 +169,9 @@ linters-settings:
     rewrite-rules:
       - pattern: 'interface{}'
         replacement: 'any'
+
+  goheader:
+    template-path: ../.github/goheader.tmpl
 
   gosec:
     excludes:
