--- a/closer/.golangci.yml
+++ b/closer/.golangci.yml
@@ -165,11 +165,6 @@ linters-settings:
       - sliceClear
       - stringXbytes
 
-  gofmt:
-    rewrite-rules:
-      - pattern: 'interface{}'
-        replacement: 'any'
-
   goheader:
     template-path: ../.github/goheader.tmpl
 
@@ -213,6 +208,7 @@ linters-settings:
       - name: string-of-int
       - name: unnecessary-stmt
       - name: unreachable-code
+      - name: use-any
       - name: waitgroup-by-value
 
 issues:
